--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="buttons"><button onclick="homeSubtract1()">-1</button><button onclick="homeSubtract2()">-2</button><button onclick="homeSubtract3()">-3</button></div>
             </div>
             <div class="sections">
-                <h3>AWAY</h3>
+                <h3>GUEST</h3>
                 <div class="score-area">
                     <p id="score2" class="score">00</p>
                 </div>
